--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pl">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122684120-1"></script>
-    <script async src="https://www.google.com/recaptcha/api.js" defer></script>
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122684120-1"></script> -->
+<!--     <script async src="https://www.google.com/recaptcha/api.js" defer></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -11,7 +11,7 @@
 
       gtag('config', 'UA-122684120-1');
     </script>
-
+ -->
     <meta charset="UTF-8">
 <!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -609,13 +609,13 @@ znajdą Państwo w <a target="_blank" href="https://drive.google.com/open?id=1xu
     </footer>
 
 
-    <script type="text/javascript" src="js/form-submission-handler.js"></script>
+<!--     <script type="text/javascript" src="js/form-submission-handler.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <script src="js/scroll2.js"></script>
     <script type="text/javascript" id="cookieinfo" src="//cookieinfoscript.com/js/cookieinfo.min.js"
-            data-message="Ta strona używa plików Cookie, korzystając ze strony zgadzasz się na ich użycie."
+            data-message="Ta strona nie używa plików Cookie, korzystając ze strony nie musisz zgadzać się na ich użycie ;)"
             data-moreinfo="https://pl.wikipedia.org/wiki/HTTP_cookie"
             data-linkmsg="Więcej informacji"
             >
