--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -58,8 +58,8 @@
     <section class="welcome jumbotron">
 
         <div class="welcome-text">
-            <h1>WYJAZDY, PODRÓŻE małe i duże</h1>
-            <h2>NURKOWANIE</h2>
+            <h1>WYJAZDY, PODRÓŻE małe i DUŻE</h1>
+            <h3>NURKOWANIE</h3>
             <a href="#learn">
                 <button class="button-welcome">ZOBACZ WIĘCEJ</button>
             </a>
