--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -59,7 +59,7 @@
 
         <div class="welcome-text">
             <h1>WYJAZDY, PODRÓŻE małe i DUŻE</h1>
-            <h3>NURKOWANIE</h3>
+            <h3>NURKOWANIE, BIEGANIE I INWESTYCJE</h3>
             <a href="#learn">
                 <button class="button-welcome">ZOBACZ WIĘCEJ</button>
             </a>
