--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="#home">START</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#learn">O NAS</a>
+                        <a class="nav-link" href="#learn">O MNIE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#mentors">MENTORZY</a>
@@ -75,7 +75,7 @@
 
         <div class="row learn-box">
             <div class="col-md-12 learn-topic">
-                <h2>O NAS</h2>
+                <h2>O MNIE</h2>
 
             </div>
 
