--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -83,7 +83,7 @@
                <div class="row">
                    <div class="col-md-1 flex-center"><i class="fas fa-globe-americas"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Nauka online - bez wychodzenia z domu, bez stania w korkach. Wybierasz mentora, rezerwujesz czas w jego kalendarzu, a o ustalonej godzinie klikasz w link i rozpoczynasz lekcję. </p>
+                        <p>Z zawodu jestem programistą, ale nie mogę usiedzieć w miejscu, więc poszukuję alternatywnej drogi. Uwielbiam podróże - pozwalają mi one zapomnieć o monotonii życia i nabrać energii na kolejne wyzwania. </p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-sitemap"></i></div>
