--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -83,12 +83,12 @@
                <div class="row">
                    <div class="col-md-1 flex-center"><i class="fas fa-globe-americas"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Z zawodu jestem programistą, ale nie mogę usiedzieć w miejscu, więc poszukuję alternatywnej drogi. Uwielbiam podróże - pozwalają mi one zapomnieć o monotonii życia i nabrać energii na kolejne wyzwania. W wolnym czasie lubię przebiec maraton lub zanurkować się w ciepłych wodach oceanu.</p>
+                        <p>Z zawodu jestem programistą, ale nie mogę usiedzieć w miejscu, więc poszukuję alternatywnej drogi. Uwielbiam podróże - pozwalają mi one zapomnieć o monotonii życia i nabrać energii na kolejne wyzwania. W wolnym czasie lubię przebiec maraton lub zanurkować się w ciepłych wodach oceanu. A zimą wyruszyć na skiturową wyrypę.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-sitemap"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Unikatowa formuła kursu. Programowanie to nie tylko Java, uczymy też podstaw Angulara, HTMLa, Springa, Hibernate'a, Dockera, Selenium, GITa, AWSa i Jenkinsa. Z nami napiszesz kompletny projekt składający się z backendu, frontendu, testów akceptacyjnych i deploymentu.</p>
+                        <p>Uwielbiam kawę. Jeśli masz ochotę pogadać o podróżach, nurkowaniu, bieganiu, byciu programistą, czy prowadzeniu firmy w Polsce (sic! kolejny sport ekstremalny) to zapraszam Cię na filiżankę. Przy okazji możemy obejrzeć tysiące zdjęć z minionych wypraw lub umówić się na kolejną.</p>
                    </div>
                    
                    <div class="col-md-1 flex-center"><i class="fas fa-users-cog"></i></div>
