--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -88,7 +88,7 @@
 
                    <div class="col-md-1 flex-center"><i class="fas fa-sitemap"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Uwielbiam kawę. Jeśli masz ochotę pogadać o podróżach, nurkowaniu, bieganiu, ciężkim losie programisty, czy prowadzeniu firmy w Polsce (sic! kolejny sport ekstremalny) to zapraszam Cię na filiżankę. Przy okazji możemy obejrzeć tysiące zdjęć z minionych wypraw lub umówić się na kolejną lub wspólne nurkowanie.</p>
+                        <p>Uwielbiam kawę. Jeśli masz ochotę pogadać o podróżach, nurkowaniu, bieganiu, ciężkim losie programisty, czy prowadzeniu firmy w Polsce (sic! kolejny sport ekstremalny) to zapraszam Cię na filiżankę. Przy okazji możemy obejrzeć zdjęcia z minionych wypraw, umówić się na kolejny wyjazd lub wspólne nurkowanie.</p>
                    </div>
                    
                    <div class="col-md-1 flex-center"><i class="fas fa-users-cog"></i></div>
