--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -59,7 +59,7 @@
 
         <div class="welcome-text">
             <h1>WYJAZDY, PODRÓŻE małe i DUŻE</h1>
-            <h3>NURKOWANIE, bieganie i inwestycje</h3>
+            <h3>NURKOWANIE, góry i bieganie</h3>
             <a href="#learn">
                 <button class="button-welcome">ZOBACZ WIĘCEJ</button>
             </a>
@@ -93,28 +93,28 @@
                    
                    <div class="col-md-1 flex-center"><i class="fas fa-users-cog"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Środowisko pracy idealnie symulujące pracę programisty - dołącz do zespołu i współtwórz aplikację do zarządzania finansami. Ponad 2 lata aktywnego rozwoju, setki commitów, dziesiątki deweloperów i produkcyjna jakość. U nas nie jesteś kursantem, jesteś członkiem zespołu. Chcesz poznać szczegóły? Zapraszamy na nasz profil na <a href="https://github.com/passionate-software-engineer/personal-finance-manager" target="_blank">Github</a> <!--. Aplikację live możesz obejrzeć <a href="https://pfm-2.passionatesoftwareengineer.com" target="_blank">tutaj</a>-->.</p>
+                        <p>Hobbystycznie jestem instruktorem nurkowania. Jeśli chcesz spróbować swoich sił w tym sporcie, chcesz się rozwijać jako nurek, myślisz o wyprawie nurkowej do Egiptu, do Indonezji, na Filipiny lub w inny zakątek świata to daj znać - chętnie podzielę się swoją pasją, wiedzą i umiejętnościami.</p>
                    </div>
 
-                   <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
+<!--                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Proste zasady rozliczeń: wpłać dowolną kwotę i wykorzystaj ją na: jednorazowe konsultacje, regularne spotkania, pomoc w rozwoju prywatnego projektu, przygotowanie wyróżniającego się CV, przygotowanie do interview czy po prostu code review.</p>
-                   </div>
+                   </div> -->
 
-                   <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
+<!--                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Specjalizujemy się w osobach, które znają już podstawy programowania i chcą wyróżnić się wśród innych kandydatów na pozycję Junior Developera. Z przyjemnością wspieramy absolwentów innych szkół programowania w drodze po pierwszą pracę.</p>
                    </div>
-
-                  <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
+ -->
+<!--                   <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
                   <div class="col-md-11 flex-center">
                         <p>Gwarancja satysfakcji - nie jesteś zadowolony z udzielonego wsparcia? Opowiedz nam o tym, a my zwrócimy Ci pieniądze.</p>
-                  </div>
+                  </div> -->
 
-                  <div class="col-md-1 flex-center"><i class="fas fa-chalkboard-teacher"></i></div>
+<!--                   <div class="col-md-1 flex-center"><i class="fas fa-chalkboard-teacher"></i></div>
                   <div class="col-md-11 flex-center">
                         <p>Darmowa pierwsza lekcja - pierwsze konsultacje zupełnie za darmo. Wypróbuj już dzisiaj.</p>
-                  </div>
+                  </div> -->
                 </div>
             </div>
         </div>
