--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -96,10 +96,10 @@
                         <p>Hobbystycznie jestem instruktorem nurkowania. Jeśli chcesz spróbować swoich sił w tym sporcie, chcesz się rozwijać jako nurek, myślisz o wyprawie nurkowej do Egiptu, do Indonezji, na Filipiny lub w inny zakątek świata to daj znać - chętnie podzielę się swoją pasją, wiedzą i umiejętnościami.</p>
                    </div>
 
-<!--                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
+                   <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Proste zasady rozliczeń: wpłać dowolną kwotę i wykorzystaj ją na: jednorazowe konsultacje, regularne spotkania, pomoc w rozwoju prywatnego projektu, przygotowanie wyróżniającego się CV, przygotowanie do interview czy po prostu code review.</p>
-                   </div> -->
+                        <p>Szukasz partnera do podróży? Dobrze trafiłeś! Udało mi się dotrzeć na każdy z niezamarzniętych kontynentów i ciągle mam ochotę na więcej, coraz częściej zabieram ze sobą znajomych i tych nieznajomych. Byłem w Australii, w Chile, w Argentynie, na Wyspie Wielkanocnej, na Dominikanie, w USA, na Zanzibarze, w Egipcie, na Wyspach Kanaryjskich, na Malediwach, Sri Lance, w Indonezji i wielu innych, mniej znanych zakątkach świata.</p>
+                   </div>
 
 <!--                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
                    <div class="col-md-11 flex-center">
