--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -98,7 +98,7 @@
 
                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Szukasz partnera do podróży? Dobrze trafiłeś! Udało mi się dotrzeć na każdy z niezamarzniętych kontynentów i ciągle mam ochotę na więcej. Coraz częściej zabieram ze sobą znajomych i tych (jeszcze) nieznajomych. Byłem w Australii, w Chile, w Argentynie, na Wyspie Wielkanocnej, na Dominikanie, w USA, na Zanzibarze, w Egipcie, na Wyspach Kanaryjskich, na Malediwach, Sri Lance, w Indonezji i wielu innych, mniej znanych zakątkach świata.</p>
+                        <p>Szukasz partnera do podróży? Dobrze trafiłeś! Udało mi się dotrzeć na każdy z niezamarzniętych kontynentów i ciągle mam ochotę na więcej. Coraz częściej zabieram ze sobą znajomych i tych (jeszcze) nieznajomych. Byłem w Australii, w Chile, w Argentynie, na Wyspie Wielkanocnej, na Dominikanie, w USA, na Zanzibarze, w Egipcie, na Wyspach Kanaryjskich, na Malediwach, Sri Lance, w Indonezji i wielu innych, mniej znanych zakątkach świata. W wielu z tych miejsc udało mi się zanurkować.</p>
                    </div>
 
 <!--                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
