--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="#home">START</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#learn">O MNIE</a>
+                        <a class="nav-link" href="#learn">CO MOŻNA ZE MNĄ ZAŁATWIĆ?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#mentors">MENTORZY</a>
@@ -75,7 +75,7 @@
 
         <div class="row learn-box">
             <div class="col-md-12 learn-topic">
-                <h2>O MNIE</h2>
+                <h2>CO MOŻNA ZE MNĄ ZAŁATWIĆ?</h2>
 
             </div>
 
@@ -101,11 +101,11 @@
                         <p>Szukasz partnera do podróży? Dobrze trafiłeś! Udało mi się dotrzeć na każdy z niezamarzniętych kontynentów i ciągle mam ochotę na więcej. Coraz częściej zabieram ze sobą znajomych i tych (jeszcze) nieznajomych. Byłem w Australii, w Chile, w Argentynie, na Wyspie Wielkanocnej, na Dominikanie, w USA, na Zanzibarze, w Egipcie, na Wyspach Kanaryjskich, na Malediwach, Sri Lance, w Indonezji i wielu innych, mniej znanych zakątkach świata. W wielu z tych miejsc udało mi się zanurkować.</p>
                    </div>
 
-<!--                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
+                   <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Specjalizujemy się w osobach, które znają już podstawy programowania i chcą wyróżnić się wśród innych kandydatów na pozycję Junior Developera. Z przyjemnością wspieramy absolwentów innych szkół programowania w drodze po pierwszą pracę.</p>
+                        <p>Nadwyżki finansowe inwestuję w mieszkania na wynajem. Jeżeli szukasz porady jak bezpiecznie wynająć swoje mieszkanie, jak podpisać umowę, która Cię zabezpieczy, szukasz mieszkania dla siebie lub chcesz porozmawiać z osobą, która od lat z sukcesami inwestuje w mieszkania, by dowiedzieć się jak to zrobić by zarobić - daj znać, chętnie pomogę!</p>
                    </div>
- -->
+
 <!--                   <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
                   <div class="col-md-11 flex-center">
                         <p>Gwarancja satysfakcji - nie jesteś zadowolony z udzielonego wsparcia? Opowiedz nam o tym, a my zwrócimy Ci pieniądze.</p>
