--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -93,7 +93,7 @@
                    
                    <div class="col-md-1 flex-center"><i class="fas fa-users-cog"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Hobbystycznie jestem instruktorem nurkowania. Jeśli chcesz spróbować swoich sił w tym sporcie, chcesz się rozwijać jako nurek, myślisz o wyprawie nurkowej do Egiptu, do Indonezji, na Filipiny lub w inny zakątek świata to daj znać - chętnie podzielę się swoją pasją, wiedzą i umiejętnościami.</p>
+                        <p>Hobbystycznie jestem instruktorem nurkowania. Jeśli chcesz spróbować swoich sił w tym sporcie, chcesz się rozwijać jako nurek, myślisz o wyprawie nurkowej do Egiptu, do Indonezji, na Filipiny lub w inny ciekawy nurkowo zakątek świata to daj znać - chętnie podzielę się swoją pasją, wiedzą i umiejętnościami.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
