--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -101,20 +101,21 @@
                         <p>Szukasz partnera do podróży? Dobrze trafiłeś! Udało mi się dotrzeć na każdy z niezamarzniętych kontynentów i ciągle mam ochotę na więcej. Coraz częściej zabieram ze sobą znajomych i tych (jeszcze) nieznajomych. Byłem w Australii, w Chile, w Argentynie, na Wyspie Wielkanocnej, na Dominikanie, w USA, na Zanzibarze, w Egipcie, na Wyspach Kanaryjskich, na Malediwach, Sri Lance, w Indonezji i wielu innych, mniej znanych zakątkach świata. W wielu z tych miejsc udało mi się zanurkować.</p>
                    </div>
 
+
+                   <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
+                      <div class="col-md-11 flex-center">
+                        <p>Pomogłem wielu osobom wejść do świata IT i zostać programistą. Przez lata szkoliłem osoby, które chciały się przebranżowić i spróbować swoich sił jako Software Engineer. Stworzyłem autorskie kursy programowania, które do dzisiaj są wykorzystywane z sukcesami przez kursantów. Choć, z braku czasu, nie zajmuję się już aktywnie szkoleniami chętnie dzielę się zdobytym doświadczeniem i pomagam osobom, które szukają swojej nowej drogi.</p>
+                   </div>
+                   
                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Nadwyżki finansowe inwestuję w mieszkania na wynajem. Jeżeli szukasz porady jak bezpiecznie wynająć swoje mieszkanie, jak podpisać umowę, która Cię zabezpieczy, szukasz mieszkania dla siebie lub chcesz porozmawiać z osobą, która od lat z sukcesami inwestuje w mieszkania, by dowiedzieć się jak to zrobić by zarobić - daj znać, chętnie pomogę!</p>
-                   </div>
+                   </div>                  
 
-<!--                   <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
+                  <div class="col-md-1 flex-center"><i class="fas fa-chalkboard-teacher"></i></div>
                   <div class="col-md-11 flex-center">
-                        <p>Gwarancja satysfakcji - nie jesteś zadowolony z udzielonego wsparcia? Opowiedz nam o tym, a my zwrócimy Ci pieniądze.</p>
-                  </div> -->
-
-<!--                   <div class="col-md-1 flex-center"><i class="fas fa-chalkboard-teacher"></i></div>
-                  <div class="col-md-11 flex-center">
-                        <p>Darmowa pierwsza lekcja - pierwsze konsultacje zupełnie za darmo. Wypróbuj już dzisiaj.</p>
-                  </div> -->
+                        <p>Jeżeli zastanawiasz się jak ja to wszystko ogarniam, to też chętnie Ci o tym opowiem ;)</p>
+                  </div>
                 </div>
             </div>
         </div>
