--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -104,7 +104,7 @@
 
                    <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
                       <div class="col-md-11 flex-center">
-                        <p>Pomogłem wielu osobom wejść do świata IT i zostać programistą. Przez lata szkoliłem osoby, które chciały się przebranżowić i spróbować swoich sił jako Software Engineer. Stworzyłem autorskie kursy programowania, które do dzisiaj są wykorzystywane z sukcesami przez kursantów. Choć, z braku czasu, nie zajmuję się już aktywnie szkoleniami chętnie dzielę się zdobytym doświadczeniem i pomagam osobom, które szukają swojej nowej drogi.</p>
+                        <p>Pomogłem wielu osobom wejść do świata IT i zostać programistą. Przez lata szkoliłem osoby, które chciały się przebranżowić i spróbować swoich sił jako Software Engineer. Stworzyłem autorskie kursy programowania, które do dzisiaj są wykorzystywane przez kursantów. Choć, z braku czasu, nie zajmuję się już aktywnie szkoleniami chętnie dzielę się zdobytym doświadczeniem i pomagam osobom, które szukają swojej nowej drogi.</p>
                    </div>
                    
                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
