--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -130,20 +130,20 @@
              <div class="row container-box">
                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                    <div><i class="fas fa-cubes"></i></div>
-                   <div>kompletny kurs programowania</div>
+                   <div>NURKOWANIE</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-users-cog"></i></div>
-                    <div>udział w profesjonalnym projekcie</div>
+                    <div>PODRÓŻE</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-drafting-compass"></i></div>
-                    <div>rozwój własnego projektu</div>
+                    <div>INWESTYCJE</div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+<!--                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-cogs"></i></div>
                     <div>pomoc w zdobyciu pracy</div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
