--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -83,7 +83,7 @@
                <div class="row">
                    <div class="col-md-1 flex-center"><i class="fas fa-globe-americas"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Z zawodu jestem programistą, ale nie mogę usiedzieć w miejscu, więc poszukuję alternatywnej drogi. Uwielbiam podróże - pozwalają mi one zapomnieć o monotonii życia i nabrać energii na kolejne wyzwania. W wolnym czasie lubię przebiec maraton lub zanurkować się w ciepłych wodach oceanu. A zimą wyruszyć na skiturową wyrypę.</p>
+                        <p>Z zawodu jestem programistą, ale nie mogę usiedzieć w miejscu, więc poszukuję alternatywnej drogi. Uwielbiam podróże - pozwalają mi zapomnieć o monotonii życia i nabrać energii na kolejne wyzwania. W wolnym czasie lubię przebiec maraton lub zanurkować się w ciepłych wodach oceanu. A zimą wyruszyć na skiturową wyrypę.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-sitemap"></i></div>
