--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -110,7 +110,12 @@
                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Nadwyżki finansowe inwestuję w mieszkania na wynajem. Jeżeli szukasz porady jak bezpiecznie wynająć swoje mieszkanie, jak podpisać umowę, która Cię zabezpieczy, szukasz mieszkania dla siebie lub chcesz porozmawiać z osobą, która od lat z sukcesami inwestuje w mieszkania, by dowiedzieć się jak to zrobić by zarobić - daj znać, chętnie pomogę!</p>
-                   </div>                  
+                   </div>
+
+                   <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
+                   <div class="col-md-11 flex-center">
+                        <p>Prowadzę wypożyczalnię sprzętu turystycznego i nurkowego. Jeżeli potrzebujesz box na dach samochodu, bagażnik na rowery, namiot, czekan, raki, narty czy sprzęt nurkowy (maska, BCD, pianka, płetwy, komputer nurkowy, latarka itp.) - napisz lub zadzwoń, chętnie pomogę. </p>
+                   </div>
 
                   <div class="col-md-1 flex-center"><i class="fas fa-chalkboard-teacher"></i></div>
                   <div class="col-md-11 flex-center">
@@ -140,10 +145,10 @@
                     <div><i class="fas fa-drafting-compass"></i></div>
                     <div>INWESTYCJE</div>
                 </div>
-<!--                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-cogs"></i></div>
-                    <div>pomoc w zdobyciu pracy</div>
-                </div> -->
+                    <div>WYPOŻYCZALNIA</div>
+                </div>
             </div>
         </div>
     </div>
