--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -117,6 +117,11 @@
                         <p>Prowadzę wypożyczalnię sprzętu turystycznego i nurkowego. Jeżeli potrzebujesz box na dach samochodu, bagażnik na rowery, namiot, czekan, raki, narty czy sprzęt nurkowy (maska, BCD, pianka, płetwy, komputer nurkowy, latarka itp.) - napisz lub zadzwoń, chętnie pomogę. </p>
                    </div>
 
+                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
+                   <div class="col-md-11 flex-center">
+                        <p>Jeżeli potrzebujesz wiertarkę, multitool, szlifierkę kątową czy inne podstawowe narzędzia, to też da się ze mną załatwić.</p>
+                   </div>
+
                   <div class="col-md-1 flex-center"><i class="fas fa-chalkboard-teacher"></i></div>
                   <div class="col-md-11 flex-center">
                         <p>Jeżeli zastanawiasz się jak ja to wszystko ogarniam, to też chętnie Ci o tym opowiem ;)</p>
