--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -124,7 +124,7 @@
 
                   <div class="col-md-1 flex-center"><i class="fas fa-chalkboard-teacher"></i></div>
                   <div class="col-md-11 flex-center">
-                        <p>Jeżeli zastanawiasz się jak ja to wszystko ogarniam, to też chętnie Ci o tym opowiem ;)</p>
+                        <p>Jeżeli zastanawiasz się jak ja to wszystko ogarniam, to chętnie Ci o tym opowiem ;)</p>
                   </div>
                 </div>
             </div>
