--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -114,7 +114,7 @@
 
                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Prowadzę wypożyczalnię sprzętu turystycznego i nurkowego. Jeżeli potrzebujesz box na dach samochodu, bagażnik na rowery, namiot, czekan, raki, narty czy sprzęt nurkowy (maska, BCD, pianka, płetwy, komputer nurkowy, latarka itp.) - napisz lub zadzwoń, chętnie pomogę. </p>
+                        <p>Prowadzę wypożyczalnię sprzętu turystycznego i nurkowego. Jeżeli potrzebujesz box na dach samochodu, bagażnik na rowery, namiot, czekan, raki, narty, detektor lawinowy czy sprzęt nurkowy (maska, BCD, pianka, płetwy, komputer nurkowy, latarka itp.) - napisz lub zadzwoń, chętnie pomogę. </p>
                    </div>
 
                     <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
@@ -140,19 +140,19 @@
              <div class="row container-box">
                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                    <div><i class="fas fa-cubes"></i></div>
-                   <div>NURKOWANIE</div>
+                   <div>Nurkowanie</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-users-cog"></i></div>
-                    <div>PODRÓŻE</div>
+                    <div>Podróże</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-drafting-compass"></i></div>
-                    <div>WYPOŻYCZALNIA</div>
+                    <div>Wypożyczalnia</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-cogs"></i></div>
-                    <div>INWESTYCJE</div>
+                    <div>Inwestycje</div>
                 </div>
             </div>
         </div>
