--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -140,19 +140,19 @@
              <div class="row container-box">
                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                    <div><i class="fas fa-cubes"></i></div>
-                   <div>Nurkowanie</div>
+                   <div>NURKOWANIE</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-users-cog"></i></div>
-                    <div>Podróże</div>
+                    <div>PODRÓŻE</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-drafting-compass"></i></div>
-                    <div>Wypożyczalnia</div>
+                    <div>WYPOŻYCZALNIA</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-cogs"></i></div>
-                    <div>Inwestycje</div>
+                    <div>INWESTYCJE</div>
                 </div>
             </div>
         </div>
