--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Java, kurs programowania, szkoła IT, nauka programowania">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.6.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/style-new.css">
 
@@ -81,7 +81,7 @@
 
             <div class="col-md-12 learn-description">
                <div class="row">
-                   <div class="col-md-1 flex-center"><i class="fas fa-globe-americas"></i></div>
+                   <div class="col-md-1 flex-center"><i class="fas fa-keyboard"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Z zawodu jestem programistą, ale nie mogę usiedzieć w miejscu, więc poszukuję alternatywnej drogi. Uwielbiam podróże - pozwalają mi zapomnieć o monotonii życia i nabrać energii na kolejne wyzwania. W wolnym czasie lubię przebiec maraton lub zanurkować się w ciepłych wodach oceanu. A zimą wyruszyć na skiturową wyrypę.</p>
                    </div>
