--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -91,38 +91,37 @@
                         <p>Uwielbiam kawę. Jeśli masz ochotę pogadać o podróżach, nurkowaniu, bieganiu, ciężkim losie programisty, czy prowadzeniu firmy w Polsce (sic! kolejny sport ekstremalny) to zapraszam Cię na filiżankę. Przy okazji możemy obejrzeć zdjęcia z minionych wypraw, umówić się na kolejny wyjazd lub wspólne nurkowanie.</p>
                    </div>
                    
-                   <div class="col-md-1 flex-center"><i class="fas fa-users-cog"></i></div>
+                   <div class="col-md-1 flex-center"><i class="fas fa-fish"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Hobbystycznie jestem instruktorem nurkowania. Jeśli chcesz spróbować swoich sił w tym sporcie, chcesz się rozwijać jako nurek, myślisz o wyprawie nurkowej do Egiptu, do Indonezji, na Filipiny lub w inny ciekawy nurkowo zakątek świata to daj znać - chętnie podzielę się swoją pasją, wiedzą i umiejętnościami.</p>
                    </div>
 
-                   <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
+                   <div class="col-md-1 flex-center"><i class="fas fa-globe-americas"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Szukasz partnera do podróży? Dobrze trafiłeś! Udało mi się dotrzeć na każdy z niezamarzniętych kontynentów i ciągle mam ochotę na więcej. Coraz częściej zabieram ze sobą znajomych i tych (jeszcze) nieznajomych. Byłem w Australii, w Chile, w Argentynie, na Wyspie Wielkanocnej, na Dominikanie, w USA, na Zanzibarze, w Egipcie, na Wyspach Kanaryjskich, na Malediwach, Sri Lance, w Indonezji i wielu innych, mniej znanych zakątkach świata. W wielu z tych miejsc udało mi się zanurkować.</p>
                    </div>
 
-
-                   <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
+                   <div class="col-md-1 flex-center"><i class="far fa-desktop"></i></div>
                       <div class="col-md-11 flex-center">
                         <p>Pomogłem wielu osobom wejść do świata IT i zostać programistą. Przez lata szkoliłem osoby, które chciały się przebranżowić i spróbować swoich sił jako Software Engineer. Stworzyłem autorskie kursy programowania, które do dzisiaj są wykorzystywane przez kursantów. Choć, z braku czasu, nie zajmuję się już aktywnie szkoleniami chętnie dzielę się zdobytym doświadczeniem i pomagam osobom, które szukają swojej nowej drogi.</p>
                    </div>
                    
-                   <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
+                   <div class="col-md-1 flex-center"><i class="far fa-home"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Nadwyżki finansowe inwestuję w mieszkania na wynajem. Jeżeli szukasz porady jak bezpiecznie wynająć swoje mieszkanie, jak podpisać umowę, która Cię zabezpieczy, szukasz mieszkania dla siebie lub chcesz porozmawiać z osobą, która od lat z sukcesami inwestuje w mieszkania, by dowiedzieć się jak to zrobić by zarobić - daj znać, chętnie pomogę!</p>
                    </div>
 
-                   <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
+                   <div class="col-md-1 flex-center"><i class="far fa-skiing"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Prowadzę wypożyczalnię sprzętu turystycznego i nurkowego. Jeżeli potrzebujesz box na dach samochodu, bagażnik na rowery, namiot, czekan, raki, narty, detektor lawinowy czy sprzęt nurkowy (maska, BCD, pianka, płetwy, komputer nurkowy, latarka itp.) - napisz lub zadzwoń, chętnie pomogę. </p>
                    </div>
 
-                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
+                    <div class="col-md-1 flex-center"><i class="far fa-hammer"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Jeżeli potrzebujesz wiertarkę, multitool, szlifierkę kątową czy inne podstawowe narzędzia, to też da się ze mną załatwić.</p>
+                        <p>Jeżeli potrzebujesz wiertarkę, wkrętarkę, multitool, szlifierkę kątową czy inne podstawowe narzędzia, to też da się ze mną załatwić.</p>
                    </div>
 
-                  <div class="col-md-1 flex-center"><i class="fas fa-chalkboard-teacher"></i></div>
+                  <div class="col-md-1 flex-center"><i class="fas fa-tasks"></i></div>
                   <div class="col-md-11 flex-center">
                         <p>Jeżeli zastanawiasz się jak ja to wszystko ogarniam, to chętnie Ci o tym opowiem ;)</p>
                   </div>
