--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -8,11 +8,11 @@
 
     <title>kolacz.it</title>
 
-    <meta name="description" content="Nauka programowania dla początkujacych i zaawansowanych.">
-    <meta name="keywords" content="Java, kurs programowania, szkoła IT, nauka programowania">
+    <meta name="description" content="Wyjazdy, podróże, nurkowanie, wypożyczalnia">
+    <meta name="keywords" content="Wyjazdy, podróże, nurkowanie, wypożyczalnia">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.6.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/style-new.css">
 
