--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Wyjazdy, podróże, nurkowanie, wypożyczalnia">
     <meta name="keywords" content="Wyjazdy, podróże, nurkowanie, wypożyczalnia">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.6.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/style-new.css">
@@ -463,10 +463,10 @@
 
 <!--     <script type="text/javascript" src="js/form-submission-handler.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/scroll2.js"></script>
-    <script type="text/javascript" id="cookieinfo" src="//cookieinfoscript.com/js/cookieinfo.min.js"
+    
+            <script type="text/javascript" id="cookieinfo" src="//cookieinfoscript.com/js/cookieinfo.min.js"
             data-message="Ta strona nie używa plików Cookie, korzystając ze strony nie musisz zgadzać się na ich użycie ;)"
             data-moreinfo="https://pl.wikipedia.org/wiki/HTTP_cookie"
             data-linkmsg="Więcej informacji"
