--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -58,8 +58,8 @@
     <section class="welcome jumbotron">
 
         <div class="welcome-text">
-            <h1>WYJAZDY, PODRÓŻE małe i DUŻE</h1>
-            <h3>NURKOWANIE, góry i bieganie</h3>
+            <h1>WYJAZDY, NURKOWANIE, WYPOŻYCZALNIA</h1>
+<!--             <h3>NURKOWANIE, góry i bieganie</h3> -->
             <a href="#learn">
                 <button class="button-welcome">ZOBACZ WIĘCEJ</button>
             </a>
@@ -118,7 +118,7 @@
 
                     <div class="col-md-1 flex-center"><i class="fas fa-hammer"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Jeżeli potrzebujesz wiertarkę, wkrętarkę, multitool, szlifierkę kątową czy inne podstawowe narzędzia, to też da się ze mną załatwić.</p>
+                        <p>Jeżeli potrzebujesz wiertarkę, wkrętarkę, multitool, szlifierkę kątową czy inne podstawowe narzędzia, to też da się je ode mnie pożyczyć.</p>
                    </div>
 
                   <div class="col-md-1 flex-center"><i class="fas fa-tasks"></i></div>
