--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -58,9 +58,9 @@
     <section class="welcome jumbotron">
 
         <div class="welcome-text">
-            <h1>WYJAZDY, NURKOWANIE, WYPOŻYCZALNIA</h1>
-            <h3></h3>
-<!--             <h3>NURKOWANIE, góry i bieganie</h3> -->
+            <h1>WYJAZDY i NURKOWANIE</h1>
+            <h3> WYPOŻYCZALNIA </h3>
+            
             <a href="#learn">
                 <button class="button-welcome">ZOBACZ WIĘCEJ</button>
             </a>
