--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -102,6 +102,11 @@
                         <p>Szukasz partnera do podróży? Dobrze trafiłeś! Udało mi się dotrzeć na każdy z niezamarzniętych kontynentów i ciągle mam ochotę na więcej. Coraz częściej zabieram ze sobą znajomych i tych (jeszcze) nieznajomych. Byłem w Australii, w Chile, w Argentynie, na Wyspie Wielkanocnej, na Dominikanie, w USA, na Zanzibarze, w Egipcie, na Wyspach Kanaryjskich, na Malediwach, Sri Lance, w Indonezji i wielu innych, mniej znanych zakątkach świata. W wielu z tych miejsc udało mi się zanurkować.</p>
                    </div>
 
+                   <div class="col-md-1 flex-center"><i class="fas fa-mountain-sun"></i></div>
+                   <div class="col-md-11 flex-center">
+                        <p>Z górami jestem związany od lat. Przez lata wspinałem się latem i zimą. Ostatnimi czasy łączę pasję do podróży i gór zdobywając kolejne szczyty z Korony Europy i Polski - wiele z moich wyjazdów jest ułożonych tak by przy okazji odkryć kolejne interesujące szczyty. Zimą lubię poruszać się na ski-tourach a latem pobiegać po górskich szlakach? Chcesz dołączyć do wspólnej przygody?</p>
+                   </div>
+
                    <div class="col-md-1 flex-center"><i class="fas fa-desktop"></i></div>
                       <div class="col-md-11 flex-center">
                         <p>Pomogłem wielu osobom wejść do świata IT i zostać programistą. Przez lata szkoliłem osoby, które chciały się przebranżowić i spróbować swoich sił jako Software Engineer. Stworzyłem autorskie kursy programowania, które do dzisiaj są wykorzystywane przez kursantów. Choć, z braku czasu, nie zajmuję się już aktywnie szkoleniami chętnie dzielę się zdobytym doświadczeniem i pomagam osobom, które szukają swojej nowej drogi.</p>
