--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -58,8 +58,8 @@
     <section class="welcome jumbotron">
 
         <div class="welcome-text">
-            <h1>WYJAZDY i NURKOWANIE</h1>
-            <h3> WYPOŻYCZALNIA </h3>
+            <h1>WYJAZDY, SZKOLENIA, NURKOWANIE</h1>
+            <h3>WYPOŻYCZALNIA, WYNAJEM MIESZKAŃ</h3>
             
             <a href="#learn">
                 <button class="button-welcome">ZOBACZ WIĘCEJ</button>
