--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -104,7 +104,7 @@
 
                    <div class="col-md-1 flex-center"><i class="fas fa-mountain-sun"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Z górami jestem związany od lat. Przez lata wspinałem się latem i zimą. Ostatnimi czasy łączę pasję do podróży i gór zdobywając kolejne szczyty z Korony Europy i Polski - wiele z moich wyjazdów jest ułożonych tak by przy okazji odkryć kolejne interesujące szczyty. Zimą lubię poruszać się na ski-tourach a latem pobiegać po górskich szlakach. Chcesz dołączyć do wspólnej przygody?</p>
+                        <p>Z górami jestem związany od pradawnych czasów. Przez lata wspinałem się latem i zimą. Ostatnimi czasy łączę pasję do podróży i gór zdobywając kolejne szczyty z Korony Europy i Polski - wiele z moich wyjazdów jest ułożonych tak by przy okazji odkryć kolejne interesujące szczyty. Zimą lubię poruszać się na ski-tourach a latem pobiegać po górskich szlakach. Chcesz dołączyć do wspólnej przygody?</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-desktop"></i></div>
