--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -94,7 +94,7 @@
                    
                    <div class="col-md-1 flex-center"><i class="fas fa-fish"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Hobbystycznie jestem instruktorem nurkowania. Jeśli chcesz spróbować swoich sił w tym sporcie, chcesz się rozwijać jako nurek, myślisz o wyprawie nurkowej do Egiptu, do Indonezji, na Filipiny lub w inny ciekawy nurkowo zakątek świata to daj znać - chętnie podzielę się swoją pasją, wiedzą i umiejętnościami.</p>
+                        <p>Hobbystycznie jestem instruktorem nurkowania. Jeśli chcesz spróbować swoich sił w tym sporcie, chcesz się rozwijać jako nurek, myślisz o wyprawie nurkowej do Egiptu, Indonezji, na Filipiny lub w inny ciekawy nurkowo zakątek świata to daj znać - chętnie podzielę się swoją pasją, wiedzą i umiejętnościami.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-globe-americas"></i></div>
