--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="#learn">CO MOŻNA ZE MNĄ ZAŁATWIĆ?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#mentors">MENTORZY</a>
+                        <a class="nav-link" href="#mentors">WYJAZDY</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#faq">FAQ</a>
@@ -165,8 +165,6 @@
 </section>
 
 
-<!--  -----  NASI MENTORZY  ----- -->
-
 <div id="mentors"></div>
 
     <section class="team container-fluid">
@@ -174,8 +172,7 @@
         <div class="row mentors-box">
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mentors-topic">
-                <h2>MENTORZY</h2>
-<!--                 <h6>nasz zespół mentorów</h6> -->
+                <h2>WYJAZDY</h2>
             </div>
 
             <div class="mentor col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -183,12 +180,12 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
                         <img src="img/Piotr_new.jpeg" class="img-responsive">
-                         <h3 class="name">Piotr</h3>
-                        <h6 class="function">Mentor Java</h6><i class="fas fa-user-tie ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="LEAD Mentor"></i>
+                         <h3 class="name">Korona Bałkanów</h3>
+<!--                         <h6 class="function">Mentor Java</h6><i class="fas fa-user-tie ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="LEAD Mentor"></i> -->
                          <p>Człowiek który pokazuje, że limity nie istnieją: zostanie wysoko cenionym specjalistą zajęło mu tylko 6 lat. Pasjonat zdalnej pracy i nauki. Od 4 lat szkoli przyszłych programistów.
                          </p>
-                         <a target="_blank" href="https://pl.linkedin.com/in/piotr-ko%C5%82acz"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Zobacz profil mentora"></i></a>
-                        <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><i class="fas ment-ico fa-calendar-alt d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Zarezerwuj spotkanie"></i></a>
+<!--                          <a target="_blank" href="https://pl.linkedin.com/in/piotr-ko%C5%82acz"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Zobacz profil mentora"></i></a> -->
+                        <a target="_blank" href="wyjazd-szczyty-balkanow.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a>
                     </div> 
 
                     
@@ -212,7 +209,7 @@
 
 <!--  -----  POZIOMY MENTORÓW  ----- -->
 
-    <section class="container level">
+<!--     <section class="container level">
 
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 level-topic">
@@ -240,7 +237,7 @@
 
         </div>
 
-    </section>
+    </section> -->
 
 <!--  -----  FAQ  ------->
 
