--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -181,15 +181,16 @@
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
                         <img src="img/Piotr_new.jpeg" class="img-responsive">
                          <h3 class="name">Korona Bałkanów</h3>
-<!--                         <h6 class="function">Mentor Java</h6><i class="fas fa-user-tie ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="LEAD Mentor"></i> -->
+                         <h6 class="function">16 dni, 4500 km</h6>
+                        <i class="fas fa-car ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="car"></i>
                          <p>Człowiek który pokazuje, że limity nie istnieją: zostanie wysoko cenionym specjalistą zajęło mu tylko 6 lat. Pasjonat zdalnej pracy i nauki. Od 4 lat szkoli przyszłych programistów.
                          </p>
-<!--                          <a target="_blank" href="https://pl.linkedin.com/in/piotr-ko%C5%82acz"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Zobacz profil mentora"></i></a> -->
+
                         <a target="_blank" href="wyjazd-szczyty-balkanow.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a>
                     </div> 
 
                     
-                    <div class="col-lg-3 col-md-3 col-sm-5 col-xs-4 col-xxs-10 person">
+<!--                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-4 col-xxs-10 person">
                         <img src="img/seba1.jpg" class="img-responsive">
                         <h3 class="name">Sebastian</h3>
                         <h6 class="function">Mentor Java</h6>
@@ -198,7 +199,7 @@
                         </p>
                         <a target="_blank" href="https://www.linkedin.com/in/sebastian-pacuk/"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Zobacz profil mentora"></i></a>
                         <a target="_blank" href="https://calendly.com/spacuk/konsultacje"><i class="fas fa-calendar-alt ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Zarezerwuj spotkanie"></i></a>
-                    </div>
+                    </div> -->
                     
                 </div>
             </div>
