--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -180,10 +180,10 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
                         <img src="Balkan_topo_pl.jpg" class="img-responsive">
-                         <h3 class="name">Korona Bałkanów</h3>
+                         <h3 class="name">Bałkany</h3>
                          <h6 class="function">16 dni, 4500 km</h6>
                         <i class="fas fa-car ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="car"></i>
-                         <p>Prawdziwa przygoda - kilkanaście krajów w kilkanaście dni. Piękne, puste góry, stabilna pogoda, przyjaźni lokalsi i smaczne jedzenie. Wyprawa pokazuje, że w Europie są jeszcze spokojne miejsca z dala od zatłoczonych szlaków.
+                         <p>Prawdziwa przygoda - kilkanaście krajów w kilkanaście dni. Piękne, puste góry, słońce, przyjaźni lokalsi i przepyszne tradycyjne jedzenie. Wyprawa pokazuje, że w Europie są jeszcze spokojne miejsca z dala od zatłoczonych szlaków. Gdy robi się zbyt intensywnie, możemy zatrzymać się w jednym miejscu na dłużej a na pozostałe szczyty wrócić w późniejszym terminie - wszystko zależy od uczestników.
                          </p>
 
                         <a target="_blank" href="wyjazd-szczyty-balkanow.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a>
