--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -8,8 +8,8 @@
 
     <title>kolacz.it</title>
 
-    <meta name="description" content="Wyjazdy, podróże, nurkowanie, wypożyczalnia">
-    <meta name="keywords" content="Wyjazdy, podróże, nurkowanie, wypożyczalnia">
+    <meta name="description" content="Wyjazdy, wyprawy, nurkowanie, wypożyczalnia">
+    <meta name="keywords" content="Wyjazdy, wyprawy, nurkowanie, wypożyczalnia">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.6.0/css/all.css" crossorigin="anonymous">
@@ -149,7 +149,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-users-cog"></i></div>
-                    <div>PODRÓŻE</div>
+                    <div>WYPRAWY</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-drafting-compass"></i></div>
