--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -195,7 +195,7 @@
                          <h3 class="name">Węgry, Rumunia, Mołdawia</h3>
                          <h6 class="function">9 dni, 3000 km</h6>
                         <i class="fas fa-car ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="car"></i>
-                         <p>Rumunia to piękne, kręte, górskie drogi, malownicze szczyty i zamki oraz tradycyjne jedzenie. Znacznie bliżej niż na Bałkany a tłumów w górach nie spotkamy. W zależności od chęci grupy możemy zostać dłużej w górach, przejechać wzdłuż przełomu Dunaju, bądź zobaczyć malowniczą deltę Dunaju - tak gdzie najdłuższa rzeka Europy wpływa do Morza Czarnego.
+                         <p>Rumunia to piękne, kręte, górskie drogi, malownicze szczyty i zamki oraz tradycyjne jedzenie. Znacznie bliżej niż na Bałkany a tłumów w górach nie spotkamy. W zależności od chęci grupy możemy zostać dłużej w górach, przejechać wzdłuż przełomu Dunaju, bądź zobaczyć malowniczą deltę Dunaju - tak gdzie najdłuższa rzeka Europy wpływa do Morza Czarnego. Po drodze warto zajrzeć do Mołdawii i zdobyć najwyższy szczyt Węgier.
                          </p>
 
                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a>
