--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -201,6 +201,17 @@
                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a>
                     </div> 
 
+                         <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
+                        <img src="Egipt-square.jpg" class="img-responsive">
+                         <h3 class="name">Safari nurkowe w Egipcie</h3>
+                         <h6 class="function">7 dni</h6>
+                        <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="car"></i>
+                         <p>Wyjazd, który pozwala zapomnieć o szarej rzeczywistości - 7 dni na łodzi z dużą ilością słońca, z dala od brzegu i zasiegu Internetu. Dzień na prosty grafik: pobudka o wschodzie słońca, nurkowanie, śniadanie, nurkowanie, obiad, nurkowanie, podwieczorek, nurkowanie po zachodzie słońca, kolacja, wieczorna integracja i wczesna pobudka kolejnego dnia :) 20 niezapomnianych nurków w ciągu tygodnia, jedne z najpiękniejszych raf na świecie.
+                         </p>
+
+<!--                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
+                    </div> 
+
 
                     
                 </div>
