--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -281,15 +281,15 @@
 
         </div>
 
-    </section>
+<!--     </section> -->
 
-    <section class="team container-fluid">
+<!--     <section class="team container-fluid"> -->
 
         <div class="row mentors-box">
 
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mentors-topic">
+<!--             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mentors-topic">
                 <h2>WYJAZDY</h2>
-            </div>
+            </div> -->
 
             <div class="mentor col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
