--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -265,9 +265,9 @@
                     </div>
 
 
-                    <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
+<!--                     <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
                             class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"
-                            data-placement="top" title="Szczegóły wyjazdu"></i></a>
+                            data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
                 </div>
 
 
@@ -347,10 +347,10 @@
                         <!--                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
                     </div>
 
-
+<!-- 
                     <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
                             class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"
-                            data-placement="top" title="Szczegóły wyjazdu"></i></a>
+                            data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
                 </div>
 
 
