--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -296,12 +296,12 @@
                 <div class="row">
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
-                        <img src="Balkany-square.jpg" class="img-responsive">
-                        <h3 class="name">Bałkany</h3>
-                        <h6 class="function">16 dni, 4500 km</h6>
-                        <i class="fas fa-car ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
-                            data-placement="top" title="car"></i>
-                        <p>Prawdziwa przygoda - kilkanaście krajów w kilkanaście dni. Piękne, puste góry, słońce,
+                        <img src="Indonezja-square.jpg" class="img-responsive">
+                        <h3 class="name">Indonezja</h3>
+                        <h6 class="function">16 dni</h6>
+                        <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
+                            data-placement="top" title="plane"></i>
+                        <p>TODO Prawdziwa przygoda - kilkanaście krajów w kilkanaście dni. Piękne, puste góry, słońce,
                             przyjaźni lokalsi i przepyszne tradycyjne jedzenie. Wyprawa pokazuje, że w Europie są
                             jeszcze spokojne miejsca z dala od zatłoczonych szlaków. Gdy robi się zbyt intensywnie,
                             możemy zatrzymać się w jednym miejscu na dłużej a na pozostałe szczyty wrócić w późniejszym
@@ -336,7 +336,7 @@
                         <h3 class="name">Safari nurkowe w Egipcie</h3>
                         <h6 class="function">7 dni</h6>
                         <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
-                            data-placement="top" title="car"></i>
+                            data-placement="top" title="plane"></i>
                         <p>Wyjazd, który pozwala zapomnieć o szarej rzeczywistości - 7 dni na łodzi z dużą ilością
                             słońca, z dala od brzegu i zasiegu Internetu. Dzień ma prosty grafik: pobudka o wschodzie
                             słońca, nurkowanie, śniadanie, nurkowanie, obiad, nurkowanie, podwieczorek, zachód słońca,
